# s2_codestructure_exercise

./: Makefile  README.md  data.dvc  pyproject.toml  requirements.txt  trainer.dockerfile
.dvc/: config
.github/workflows/: tests.yml
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pt
s2_codestructure_exercise/: __init__.py  train_model.py
s2_codestructure_exercise/data/: make_dataset.py
s2_codestructure_exercise/models/: model.py
tests/: test_data.py
